# QuestBoard

./: .env.example  .gitignore  README.md  compose.override.example.yaml  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  scoring.py
backend/app/routers/: events.py  projects.py  tasks.py
backend/tests/: conftest.py  test_tasks.py
backups/: README.md
data/: README.md
docs/: README.md  cadrage-projet.md  economie-rpg.md  fiche-mvp.md  maquettes-textuelles.md
exports/: README.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/calendrier/: +page.svelte
frontend/src/routes/inbox/: +page.svelte
frontend/src/routes/projets/: +page.svelte
frontend/static/assets/pixel/: README.md
scripts/: README.md  dev-local.ps1
