[project]
name = "questboard-backend"
version = "0.1.0"
description = "FastAPI backend for QuestBoard"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
